# dnd_agent

./: .docstring.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTOR-LICENSE.md  Makefile  README.md  docker-compose.yml  init.sql  pyproject.toml
.github/workflows/: ci.yaml
app/: frontend.py  initial_setup.sh  verify_persistence.py
app/backend/: main.py
app/backend/database/: db_manager.py
automations/: config.yaml
docs/: README.md
docs/source/: api.rst  changelog.rst  conf.py  contributing.md  faq.md  glossary.md  index.rst  introduction.md  quickstart.md
docs/source/_autosummary/: dnd_agent.dnd_agent.rst  dnd_agent.rst
scripts/: campaign_example.py  chatbot.py  example.py  example_script.py  test.json  test_notebook.ipynb
scripts/_doc_helpers/: auto_generate_all.py  cleanup_docstrings.py  generate_ai_docstrings.py  generate_docs.py  generate_markdown_docs.py  generate_tests.py  integrated_doc_generator.py  markdown_builder.py  track_docstring_quality.py
src/dnd_agent/: __init__.py  agent.py  migration_helper.py  multiagent.py  tools.py
src/dnd_agent/agents/: __init__.py  base.py  combat.py  entity.py  memory.py  narrative.py  orchestrator.py  rules.py  spatial.py
src/dnd_agent/database/: api_client.py  neo4j_manager.py  vector_db.py
src/dnd_agent/models/: agent_deps.py  location_handling.py
src/dnd_agent/tools/: __init__.py  campaign_storage.py  chat_memory.py  dnd_resources.py  graph.py  spatial.py
